Start scrapyard project page

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
       <div class="projects-container large-block-space">
         <div class="filter-option" data-filter="game">
-          <a href="project-template.html">
+          <a href="scrap-yard.html">
             <img
-              src="./images/scrapyard.png"
+              src="./images/landing-scrapyard.jpg"
               alt="Brightly colored game board with cards and game money fanned around it"
               width="250px"
             />
