Start hello project page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a href="scrap-yard.html">
             <img
               src="./images/landing-scrapyard.jpg"
-              alt="Brightly colored game board with cards and game money fanned around it"
+              alt="Text stating 'Scrap Yard: Innovators of Recycling' above graphics for a fake five-dollar bill and single game die"
               width="250px"
             />
             <h2 class="project-title">
@@ -70,15 +70,17 @@
           </a>
         </div>
         <div class="filter-option" data-filter="code art">
-          <img
-            src="./images/hello.png"
-            alt="Screenshot of website page showing abstract graphics"
-            width="250px"
-          />
-          <h2 class="project-title">
-            Hello
-            <span class="project-subtitle">(Net Art)</span>
-          </h2>
+          <a href="hello.html">
+            <img
+              src="./images/landing-helloworld.jpg"
+              alt="Screenshot of website page showing abstract graphics"
+              width="250px"
+            />
+            <h2 class="project-title">
+              Hello
+              <span class="project-subtitle">(Net Art)</span>
+            </h2>
+          </a>
         </div>
         <div class="filter-option" data-filter="code">
           <img
