Add wander thumbnail

--- a/index.html
+++ b/index.html
@@ -83,15 +83,17 @@
           </a>
         </div>
         <div class="filter-option" data-filter="code">
-          <img
-            src="./images/wander.png"
-            alt="Screenshot of website page showing ASCII art of a flower growing"
-            width="250px"
-          />
-          <h2 class="project-title">
-            Wander
-            <span class="project-subtitle">(Net Art)</span>
-          </h2>
+          <a href="wander.html">
+            <img
+              src="./images/landing-wander.jpg"
+              alt="Screenshot of website page showing ASCII art of a flower growing"
+              width="250px"
+            />
+            <h2 class="project-title">
+              Wander
+              <span class="project-subtitle">(Net Art)</span>
+            </h2>
+          </a>
         </div>
         <div class="filter-option" data-filter="code game">
           <img
