--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a href="hello.html">
             <img
               src="./images/landing-helloworld.jpg"
-              alt="Screenshot of website page showing abstract graphics"
+              alt="Abstract speckled graphics"
               width="250px"
             />
             <h2 class="project-title">
@@ -82,11 +82,11 @@
             </h2>
           </a>
         </div>
-        <div class="filter-option" data-filter="code">
+        <div class="filter-option" data-filter="code art">
           <a href="wander.html">
             <img
               src="./images/landing-wander.jpg"
-              alt="Screenshot of website page showing ASCII art of a flower growing"
+              alt="ASCII art of flowers growing"
               width="250px"
             />
             <h2 class="project-title">
@@ -96,37 +96,95 @@
           </a>
         </div>
         <div class="filter-option" data-filter="code game">
-          <img
-            src="./images/unmasked.png"
-            alt="Screenshot of a character in a black robe and wolf mask speaking to another robed figure. A dialog box takes up the bottom half of the screen"
-            width="250px"
-          />
-          <h2 class="project-title">
-            The Unmasked
-            <span class="project-subtitle">(Video Game)</span>
-          </h2>
+          <a href="#">
+            <img
+              src="./images/landing-unmasked.jpg"
+              alt="White animal masks in a horizontal row, including an otter, horse, wolf, reptile, rabbit, and owl"
+              width="250px"
+            />
+            <h2 class="project-title">
+              The Unmasked
+              <span class="project-subtitle">(Video Game)</span>
+            </h2>
+          </a>
         </div>
         <div class="filter-option" data-filter="code game">
-          <img
-            src="./images/debug.png"
-            alt="Red pixelated text states 'Warning: Data Corruption Found' in all-capital letters"
-            width="250px"
-          />
-          <h2 class="project-title">
-            Debug.Log
-            <span class="project-subtitle">(Video Game)</span>
-          </h2>
+          <a href="#">
+            <img
+              src="./images/landing-debug.jpg"
+              alt="Text states 'debug.Log_' in bold above the text 'Press A to execute method'"
+              width="250px"
+            />
+            <h2 class="project-title">
+              Debug.Log
+              <span class="project-subtitle">(Video Game)</span>
+            </h2>
+          </a>
         </div>
         <div class="filter-option" data-filter="game art">
-          <img
-            src="./images/david.jpg"
-            alt="A light illuminates a desk in a dark room. A laptop sits open on the desk"
-            width="250px"
-          />
-          <h2 class="project-title">
-            In David's Absence
-            <span class="project-subtitle">(Installation)</span>
-          </h2>
+          <a href="#">
+            <img
+              src="./images/landing-david.jpg"
+              alt="Postcard with a heart and 'David' written on the front, layered on top of graph paper with illegible writing"
+              width="250px"
+            />
+            <h2 class="project-title">
+              In David's Absence
+              <span class="project-subtitle">(Installation)</span>
+            </h2>
+          </a>
+        </div>
+        <div class="filter-option" data-filter="art">
+          <a href="#">
+            <img
+              src="./images/landing-home.jpg"
+              alt="Graphic outline of an open laptop with the world 'HOME' on the screen. Below the laptop is the text, 'Press any key to continue _'"
+              width="250px"
+            />
+            <h2 class="project-title">
+              Home
+              <span class="project-subtitle">(Layout Design)</span>
+            </h2>
+          </a>
+        </div>
+        <div class="filter-option" data-filter="code game">
+          <a href="#">
+            <img
+              src="./images/landing-interplay.jpg"
+              alt="White circle with abstract shape cut out of the middle"
+              width="250px"
+            />
+            <h2 class="project-title">
+              Interplay
+              <span class="project-subtitle">(Installation)</span>
+            </h2>
+          </a>
+        </div>
+        <div class="filter-option" data-filter="code game">
+          <a href="#">
+            <img
+              src="./images/landing-return.jpg"
+              alt="The word Return in all capital letters"
+              width="250px"
+            />
+            <h2 class="project-title">
+              Return
+              <span class="project-subtitle">(Video Game)</span>
+            </h2>
+          </a>
+        </div>
+        <div class="filter-option" data-filter="game">
+          <a href="#">
+            <img
+              src="./images/landing-storylines.jpg"
+              alt="Design of bird on a mountaintop, with the word 'Storylines' on the right-hand side"
+              width="250px"
+            />
+            <h2 class="project-title">
+              Storylines
+              <span class="project-subtitle">(Mobile Game)</span>
+            </h2>
+          </a>
         </div>
       </div>
 
