Add underline animation for non-gallery links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           data-filter="code"
           role="button"
           aria-label="Filter projects by: Code"
-          >Code</a
+          ><span class="underline-mask short-animation">Code</span></a
         >
         <a
           href="#/"
@@ -43,7 +43,7 @@
           data-filter="game"
           role="button"
           aria-label="Filter projects by: Games and Play"
-          >Games + Play</a
+          ><span class="underline-mask med-animation">Games + Play</span></a
         >
         <a
           href="#/"
@@ -51,7 +51,7 @@
           data-filter="art"
           role="button"
           aria-label="Filter projects by: Art"
-          >Art</a
+          ><span class="underline-mask short-animation">Art</span></a
         >
       </nav>
 
