Swap out svg underline

--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
             ></a
           >
         </div>
-        <div><a href="#" class="green">Contact Me</a></div>
+        <div>
+          <a href="#" class="green">Contact Me</a>
+        </div>
       </footer>
     </div>
   </body>
