Remove first line in multi-line underline

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           data-filter="code"
           role="button"
           aria-label="Filter projects by: Code"
-          ><span class="underline-mask short-animation">Code</span></a
+          ><span class="underline"
+            ><span class="underline-mask short-animation">Code</span></span
+          ></a
         >
         <a
           href="#/"
@@ -43,7 +45,11 @@
           data-filter="game"
           role="button"
           aria-label="Filter projects by: Games and Play"
-          ><span class="underline-mask med-animation">Games + Play</span></a
+          ><span class="underline"
+            ><span class="underline-mask med-animation"
+              >Games + Play</span
+            ></span
+          ></a
         >
         <a
           href="#/"
@@ -51,7 +57,9 @@
           data-filter="art"
           role="button"
           aria-label="Filter projects by: Art"
-          ><span class="underline-mask short-animation">Art</span></a
+          ><span class="underline"
+            ><span class="underline-mask short-animation">Art</span></span
+          ></a
         >
       </nav>
 
@@ -63,10 +71,21 @@
               alt="Text stating 'Scrap Yard: Innovators of Recycling' above graphics for a fake five-dollar bill and single game die"
               width="250px"
             />
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Scrap Yard
+                <span class="project-subtitle">(Board Game)</span></span
+              >
+            </span>
+            <!-- <img
+              src="./images/landing-scrapyard.jpg"
+              alt="Text stating 'Scrap Yard: Innovators of Recycling' above graphics for a fake five-dollar bill and single game die"
+              width="250px"
+            />
             <h2 class="project-title">
               Scrap Yard
               <span class="project-subtitle">(Board Game)</span>
-            </h2>
+            </h2> -->
           </a>
         </div>
         <div class="filter-option" data-filter="code art">
@@ -76,10 +95,12 @@
               alt="Abstract speckled graphics"
               width="250px"
             />
-            <h2 class="project-title">
-              Hello
-              <span class="project-subtitle">(Net Art)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Hello
+                <span class="project-subtitle">(Net Art)</span></span
+              ></span
+            >
           </a>
         </div>
         <div class="filter-option" data-filter="code art">
@@ -89,10 +110,12 @@
               alt="ASCII art of flowers growing"
               width="250px"
             />
-            <h2 class="project-title">
-              Wander
-              <span class="project-subtitle">(Net Art)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Wander
+                <span class="project-subtitle">(Net Art)</span></span
+              ></span
+            >
           </a>
         </div>
         <div class="filter-option" data-filter="code game">
@@ -102,10 +125,12 @@
               alt="White animal masks in a horizontal row, including an otter, horse, wolf, reptile, rabbit, and owl"
               width="250px"
             />
-            <h2 class="project-title">
-              The Unmasked
-              <span class="project-subtitle">(Video Game)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                The Unmasked
+                <span class="project-subtitle">(Video Game)</span>
+              </span></span
+            >
           </a>
         </div>
         <div class="filter-option" data-filter="code game">
@@ -115,10 +140,12 @@
               alt="Text states 'debug.Log_' in bold above the text 'Press A to execute method'"
               width="250px"
             />
-            <h2 class="project-title">
-              Debug.Log
-              <span class="project-subtitle">(Video Game)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Debug.Log
+                <span class="project-subtitle">(Video Game)</span></span
+              ></span
+            >
           </a>
         </div>
         <div class="filter-option" data-filter="game art">
@@ -128,10 +155,12 @@
               alt="Postcard with a heart and 'David' written on the front, layered on top of graph paper with illegible writing"
               width="250px"
             />
-            <h2 class="project-title">
-              In David's Absence
-              <span class="project-subtitle">(Installation)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                In David's Absence
+                <span class="project-subtitle">(Installation)</span>
+              </span></span
+            >
           </a>
         </div>
         <div class="filter-option" data-filter="art">
@@ -141,10 +170,12 @@
               alt="Graphic outline of an open laptop with the world 'HOME' on the screen. Below the laptop is the text, 'Press any key to continue _'"
               width="250px"
             />
-            <h2 class="project-title">
-              Home
-              <span class="project-subtitle">(Layout Design)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Home
+                <span class="project-subtitle">(Layout Design)</span></span
+              ></span
+            >
           </a>
         </div>
         <div class="filter-option" data-filter="code game">
@@ -154,10 +185,12 @@
               alt="White circle with abstract shape cut out of the middle"
               width="250px"
             />
-            <h2 class="project-title">
-              Interplay
-              <span class="project-subtitle">(Installation)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Interplay
+                <span class="project-subtitle">(Installation)</span></span
+              ></span
+            >
           </a>
         </div>
         <div class="filter-option" data-filter="code game">
@@ -167,10 +200,12 @@
               alt="The word Return in all capital letters"
               width="250px"
             />
-            <h2 class="project-title">
-              Return
-              <span class="project-subtitle">(Video Game)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Return
+                <span class="project-subtitle">(Video Game)</span></span
+              ></span
+            >
           </a>
         </div>
         <div class="filter-option" data-filter="game">
@@ -180,10 +215,12 @@
               alt="Design of bird on a mountaintop, with the word 'Storylines' on the right-hand side"
               width="250px"
             />
-            <h2 class="project-title">
-              Storylines
-              <span class="project-subtitle">(Mobile Game)</span>
-            </h2>
+            <span class="underline">
+              <span class="underline-mask med-animation">
+                Storylines
+                <span class="project-subtitle">(Mobile Game)</span></span
+              ></span
+            >
           </a>
         </div>
       </div>
@@ -199,7 +236,8 @@
             class="red"
             rel="noreferrer"
             target="_blank"
-            >GitHub<span class="screenreader-text">
+            ><span class="underline">GitHub</span
+            ><span class="screenreader-text">
               (Link opens in a new tab)</span
             ></a
           >
@@ -210,13 +248,16 @@
             class="yellow"
             rel="noreferrer"
             target="_blank"
-            >itch.io<span class="screenreader-text">
+            ><span class="underline">itch.io</span
+            ><span class="screenreader-text">
               (Link opens in a new tab)</span
             ></a
           >
         </div>
         <div>
-          <a href="#" class="green">Contact Me</a>
+          <a href="#" class="green"
+            ><span class="underline">Contact Me</span></a
+          >
         </div>
       </footer>
     </div>
