Adjust link styling

--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div id="main-page">
-      <a href="index.html" class="back pink">Back to home</a>
+      <a href="index.html" class="back underline underline-perm pink"
+        >Back to home</a
+      >
       <h1>Hello</h1>
       <div class="project-subtitle">Made with: HTML, CSS</div>
 
@@ -121,7 +123,7 @@
       </div>
       <a
         href="#"
-        class="back pink small-block-space"
+        class="back pink underline underline-perm small-block-space"
         onclick="scrollToTop()"
         tabindex="0"
       >
