--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             class="red"
             rel="noreferrer"
             target="_blank"
-            ><span class="underline">GitHub</span
+            ><span class="underline underline-perm">GitHub</span
             ><span class="screenreader-text">
               (Link opens in a new tab)</span
             ></a
@@ -248,7 +248,7 @@
             class="yellow"
             rel="noreferrer"
             target="_blank"
-            ><span class="underline">itch.io</span
+            ><span class="underline underline-perm">itch.io</span
             ><span class="screenreader-text">
               (Link opens in a new tab)</span
             ></a
@@ -256,7 +256,7 @@
         </div>
         <div>
           <a href="#" class="green"
-            ><span class="underline">Contact Me</span></a
+            ><span class="underline underline-perm">Contact Me</span></a
           >
         </div>
       </footer>
