--- a/scrap-yard.html
+++ b/scrap-yard.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div id="main-page">
-      <a href="index.html" class="back yellow">Back to home</a>
+      <a href="index.html" class="back yellow underline underline-perm"
+        >Back to home</a
+      >
       <h1>Scrap Yard</h1>
       <div class="project-subtitle">Made with: Adobe InDesign</div>
       <button class="main-image zoomable">
@@ -53,7 +55,7 @@
 
       <a
         href="#"
-        class="back yellow small-block-space"
+        class="back yellow underline underline-perm small-block-space"
         onclick="scrollToTop()"
         tabindex="0"
       >
