--- a/wander.html
+++ b/wander.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div id="main-page">
-      <a href="index.html" class="back pink">Back to home</a>
+      <a href="index.html" class="back underline underline-perm pink"
+        >Back to home</a
+      >
       <h1>Title</h1>
       <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
       <button class="main-image zoomable">
@@ -29,9 +31,11 @@
           target="_blank"
           class="blue"
         >
-          wandering.click<span class="screenreader-text">
-            (Link opens in a new tab)</span
-          ></a
+          <span class="underline"
+            ><span class="underline-mask med-animation"
+              >wandering.click</span
+            ></span
+          ><span class="screenreader-text"> (Link opens in a new tab)</span></a
         >
       </div>
       <div class="project-subtitle">(Best viewed on Firefox)</div>
@@ -149,7 +153,7 @@
 
       <a
         href="#"
-        class="back pink small-block-space"
+        class="back pink underline underline-perm small-block-space"
         onclick="scrollToTop()"
         tabindex="0"
       >
