--- a/project-template.html
+++ b/project-template.html
@@ -12,13 +12,14 @@
   </head>
   <body>
     <div id="main-page">
-      <a href="index.html" class="back underline underline-perm pink"
-        >Back to home</a
-      >
+      <a href="index.html" class="back pink">Back to home</a>
       <h1>Title</h1>
       <div class="project-subtitle">Made with: HTML, CSS, JavaScript</div>
       <button class="main-image zoomable">
-        <img src="images/wander.png" alt="________________" />
+        <img
+          src="images/wander.png"
+          alt="Brightly colored game board with cards and game money fanned around it"
+        />
       </button>
       <div class="project-link">
         Live project:
@@ -27,11 +28,10 @@
           rel="noreferrer"
           target="_blank"
           class="blue"
-          ><span class="underline"
-            ><span class="underline-mask med-animation">
-              wandering.click</span
-            ></span
-          ><span class="screenreader-text"> (Link opens in a new tab)</span></a
+        >
+          wandering.click<span class="screenreader-text">
+            (Link opens in a new tab)</span
+          ></a
         >
       </div>
       <div class="project-subtitle">(Best viewed on Firefox)</div>
@@ -55,55 +55,55 @@
         <button class="zoomable">
           <img
             src="images/wander1.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of a screenshot of ASCII flowers growing"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander2.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of a screenshot of ASCII landscape, with hills underneath a sun"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander3.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of a screenshot of poetic text on webpage"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander4.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of a screenshot of ASCII tree and text input on webpage"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander5.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of a screenshot of ASCII clouds"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander6.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of a screenshot of a square of ASCII grass"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander7.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of white stars on black background"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander8.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of three ASCII trees growing out of the ground"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander9.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of white ASCII flowers growing on a black background"
           />
         </button>
       </div>
@@ -112,44 +112,44 @@
         <button class="zoomable">
           <img
             src="images/wander10.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of two lines of text"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander11.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of two lines of text"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander12.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of text document that contains ASCII sketches of stars and clouds"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander13.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of text document that contains ASCII sketches of hills"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander14.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of text document that contains ASCII sketches of growing flowers and clouds"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander15.png"
-            alt="View full size version of a screenshot of ____________"
+            alt="View full size version of screenshot of text document that contains ASCII sketches of treetops"
           />
         </button>
       </div>
 
       <a
         href="#"
-        class="back pink underline underline-perm small-block-space"
+        class="back pink small-block-space"
         onclick="scrollToTop()"
         tabindex="0"
       >
