--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               width="250px"
             />
             <span class="underline">
-              <span class="underline-mask med-animation">
+              <span class="underline-mask long-animation">
                 Scrap Yard
                 <span class="project-subtitle">(Board Game)</span></span
               >
@@ -126,7 +126,7 @@
               width="250px"
             />
             <span class="underline">
-              <span class="underline-mask med-animation">
+              <span class="underline-mask long-animation">
                 The Unmasked
                 <span class="project-subtitle">(Video Game)</span>
               </span></span
@@ -156,7 +156,7 @@
               width="250px"
             />
             <span class="underline">
-              <span class="underline-mask med-animation">
+              <span class="underline-mask long-animation">
                 In David's Absence
                 <span class="project-subtitle">(Installation)</span>
               </span></span
@@ -186,7 +186,7 @@
               width="250px"
             />
             <span class="underline">
-              <span class="underline-mask med-animation">
+              <span class="underline-mask long-animation">
                 Interplay
                 <span class="project-subtitle">(Installation)</span></span
               ></span
@@ -216,7 +216,7 @@
               width="250px"
             />
             <span class="underline">
-              <span class="underline-mask med-animation">
+              <span class="underline-mask long-animation">
                 Storylines
                 <span class="project-subtitle">(Mobile Game)</span></span
               ></span
