Place stars on landing page

--- a/index.html
+++ b/index.html
@@ -261,6 +261,114 @@
         </div>
       </footer>
     </div>
+    <!-- style="left: 105px; top: 109px" -->
+    <div id="star-container">
+      <div
+        class="pink star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="yellow star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="blue star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="green star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="yellow star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="yellow star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="blue star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="red star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="blue star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="green star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="pink star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="red star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="blue star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="yellow star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+      <div
+        class="pink star paused"
+        aria-hidden="true"
+        onclick="toggleRainbow(event)"
+      >
+        *
+      </div>
+    </div>
   </body>
 
   <script src="index.js"></script>
