Reduce star size and add them back on tablets

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       <nav class="filters-list large-block-space">
         <a
           href="#/"
-          class="pink selected"
+          class="pink"
           data-filter="code"
           role="button"
           aria-label="Filter projects by: Code"
-          ><span class="underline"
+          ><span class="underline selected"
             ><span class="underline-mask short-animation">Code</span></span
           ></a
         >
@@ -227,7 +227,7 @@
 
       <footer>
         <p class="medium-block-space">
-          Or, you can find me elsewhere on the internet:
+          Or you can find me elsewhere on the internet:
         </p>
 
         <div>
